fix resume spacing

--- a/assets/css/resume.css
+++ b/assets/css/resume.css
@@ -126,7 +126,7 @@
 
 /* Tools Section */
 .resume-container .tools > .page-header {
-  margin-top: 18px;
+  margin-top: 15px;
 }
 
 
